got picture display working, styled website, set outline for mvp

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -1,1 +1,12 @@
-$berlinGrey: #57524e;
+$berlinGrey: #cebfb2;
+$cardbackground: beige;
+$clr-gray: rgba(black, .7);
+
+$neutral: #e5dada;
+
+$primary: #840032;
+$secondary: #e59500;
+$dark: #002642;
+
+$primary-black: #222337;
+$secondary-black: lighten($primary-black, 15%);
